syntax = "proto3";

option java_multiple_files = true;
option java_package = "grpc";

package store;

service StoreService {
    rpc Put (PutRequest) returns (PutReply) {};

    rpc Get (GetRequest) returns (GetReply) {};
}

message PutRequest {
    string key = 1;
    string value = 2;
}

message PutReply {
    string message = 1;
}

message GetRequest {
    string key = 1;
}

message GetReply {
    string message = 1;
}
